add geektime course ad info

--- a/index.html
+++ b/index.html
@@ -6226,6 +6226,14 @@
                 "isshow": true,
                 "start_time": "2020-05-09 00:00",
                 "end_time": "2021-12-31 00:00"
+            },
+            {
+                "title": "微信小程序全栈开发实战，原价 ¥129，早鸟优惠+口令「52program」入手仅需 ¥89，立省 ¥40 ",
+                "link": "https://time.geekbang.org/course/intro/100052401?code=gbWJRWPKzSzyCGiP60yesvVCvH%2F-FzJ4bsFuqrXppr0%3D",
+                "image": "https://i.loli.net/2020/05/20/hAMp3l9Ic2qePKx.jpg",
+                "isshow": true,
+                "start_time": "2020-05-20 00:00",
+                "end_time": "2021-12-31 00:00"
             }
         ];
         let showAds = adArray.filter(isShow).filter(isExpired);
