add android studio 4.2 canary2 links

--- a/index.html
+++ b/index.html
@@ -317,6 +317,50 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 4.2 Canary 2 -->
+                            <tr>
+                                <td rowspan="6">4.2 Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.2/android-studio-ide-201.6582697-windows.exe">android-studio-ide-201.6582697-windows.exe</a>
+                                </td>
+                                <td>915879424 bytes</td>
+                                <td>47fe66d4f5367dcc0ed682bca384b02094ce98389465a6afef34bbda6cc15c1d</td>
+                                <td rowspan="6"><a href="https://tva1.sinaimg.cn/large/007S8ZIlly1gfxc2yq9joj30mr0b30ta.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.2/android-studio-ide-201.6582697-windows.zip">android-studio-ide-201.6582697-windows.zip</a>
+                                </td>
+                                <td>930073676 bytes</td>
+                                <td>7b6465850909f78307f837223c9eb824dad90d04209abee9dafbba3f0b2792e4</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.2/android-studio-ide-201.6582697-mac.zip">android-studio-ide-201.6582697-mac.zip</a>
+                                </td>
+                                <td>923455316 bytes</td>
+                                <td>9d145c76ec6dbd410ce34f48a7528a6a9434b427c940a4ff8820403fc4e4681b</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/4.2.0.2/android-studio-ide-201.6582697-linux.tar.gz">android-studio-ide-201.6582697-linux.tar.gz</a>
+                                </td>
+                                <td>907745138 bytes</td>
+                                <td>7c28df590d5c145b6690fcf5a3c8354cf31564e05c66b140324e7ee6e75949bd</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/4.2.0.2/android-studio-ide-201.6582697-cros.deb">android-studio-ide-201.6582697-cros.deb</a>
+                                </td>
+                                <td>728371464 bytes</td>
+                                <td>34e13d799682f6b1cc80e6760ec076e3c6ccabf942742f76063fc40cc1169991</td>
+                            </tr>
                             <!-- 4.1 Beta 1 -->
                             <tr>
                                 <td rowspan="6">4.1 Beta 1</td>
