add gitads ads info

--- a/index.html
+++ b/index.html
@@ -190,16 +190,12 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <!-- <div class="swiper-slide">
-                    <a href="https://www.androiddevtools.cn/ad/lizhi-2019-1111.html?utm_source=androiddevtools.cn&amp;utm_medium=banner" target="_blank"
-                            onclick="trackOutboundLink('https://www.androiddevtools.cn/ad/lizhi-2019-1111.html', 'LiZhi-1111-Button', 'click');" title="我们的老朋友「数码荔枝」近日开始了正版软件届的双十一活动。活动时间：11月1日～11 月 12 日,                            
-                            1. 在商城首页参与抽奖 (三次机会)，最高可得 200 元现金红包；
-                            2. 10 款软件，300 个注册码，每日 11.11 元秒杀；
-                            3. 好友助力，秒杀再减 10 元 (1.11 元)；
-                            4. 30 余款软件 6 折起，全店 95 折；">
-                        <img src="https://i.loli.net/2019/10/31/fnKFVJLsDhvjO34.png">
+                <div class="swiper-slide">
+                    <a href="https://tracking.gitads.io/?campaign=gitads&repo=testrepo&redirect=gitads.io" target="_blank"
+                            onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=testrepo&redirect=gitads.io', 'GitAds-Button', 'click');" title="">
+                        <img src="https://i.loli.net/2020/06/19/UdKOei4DubCG9W6.jpg">
                     </a>
-                </div> -->
+                </div>
                 <div class="swiper-slide">
                     <a href="https://androidweekly.io?utm_source=androiddevtools.cn&amp;utm_medium=banner" target="_blank" onclick="trackOutboundLink('https://androidweekly.io', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。" >
                         <img src="https://i.loli.net/2019/10/31/DZd9HX31jL2NlxY.png">
