add gitads ads info

--- a/index.html
+++ b/index.html
@@ -5847,6 +5847,12 @@
                         <img src="https://wx4.sinaimg.cn/large/006tNbRwly1fwetq3nyf6j30xc0320td.jpg">
                     </a>
                 </div>
+                <div id="sponsor-list" class="float-left">
+                    <h2>赞助商</h2>
+                    <a href="https://tracking.gitads.io/?campaign=gitads&repo=testrepo&redirect=gitads.io">
+                        <img src="https://i.loli.net/2020/06/19/vMRdL6c4F2GlQqX.jpg" width="60%">
+                    </a>
+                </div>
                 <div id="license">
                     <h2>Disclaimer</h2>
                     <strong>版权归原作者所有，这里仅做收集整理，欢迎自由转载-非商用-非衍生-保持署名和本网站网址。</strong>
