--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
             <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                    <a href="https://tracking.gitads.io/?campaign=gitads&repo=testrepo&redirect=gitads.io" target="_blank"
-                            onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=testrepo&redirect=gitads.io', 'GitAds-Button', 'click');" title="">
+                    <a href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io" target="_blank"
+                            onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io', 'GitAds-Button', 'click');" title="">
                         <img src="https://i.loli.net/2020/06/19/UdKOei4DubCG9W6.jpg">
                     </a>
                 </div>
@@ -5849,7 +5849,7 @@
                 </div>
                 <div id="sponsor-list" class="float-left">
                     <h2>赞助商</h2>
-                    <a href="https://tracking.gitads.io/?campaign=gitads&repo=testrepo&redirect=gitads.io">
+                    <a href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io">
                         <img src="https://i.loli.net/2020/06/19/vMRdL6c4F2GlQqX.jpg" width="60%">
                     </a>
                 </div>
