--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <a href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io" target="_blank"
                             onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io', 'GitAds-Button', 'click');" title="">
-                        <img src="https://i.loli.net/2020/06/19/WJaAUlY5ZFNQ2mx.jpg">
+                        <img src="https://images.gitads.io/AndroidDevTools">
                     </a>
-                </div>
+                </div> -->
                 <div class="swiper-slide">
                     <a href="https://androidweekly.io?utm_source=androiddevtools.cn&amp;utm_medium=banner" target="_blank" onclick="trackOutboundLink('https://androidweekly.io', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。" >
                         <img src="https://i.loli.net/2019/10/31/DZd9HX31jL2NlxY.png">
@@ -261,10 +261,10 @@
     <section id="body">
         <div class="container body-container">
             <div class="row">
-                <div >
-                    <p class="center hide">
-                        <a href="http://1t.click/aBcQ" title="助力产业智慧升级，云服务器首年88元起，更有千元代金券礼包免费领！" onclick="trackOutboundLink('http://1t.click/aBcQ', 'AD-TencentCloud-1111-2019', 'click');" target="_blank">
-                            <img src="https://i.loli.net/2019/10/15/8NojldgUEmpYFyu.jpg">
+                <div>
+                    <p class="center">
+                        <a href="https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io" title="" onclick="trackOutboundLink('https://tracking.gitads.io/?campaign=gitads&repo=AndroidDevTools&redirect=gitads.io', 'GitAds', 'click');" target="_blank">
+                            <img src="https://images.gitads.io/AndroidDevTools">
                         </a>
                     </p>
                     <h1 id="introduction" class="content-title" algin="center">AndroidDevTools</h1>
